# E2EBookRecommenderSystem

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  dvc.yaml  main.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: main.yaml
app/: main.py
app/routers/: book_names.py  book_recommend.py  train_model.py
app/templates/: index.html
app/templates/static/css/: style.css
app/templates/static/js/: script.js
backup/serialized_objects/: book_names.pkl
backup/trained_model/: model.pkl
config/: config.yaml
model/: book_recommender_model.pkl
notebooks/: research.ipynb
src/BookRecommendationSystem/logger/: Logger.py
src/book_recommender/components/: stage_0_data_ingestion.py  stage_1_data_validation.py  stage_2_data_transformation.py  stage_3_model_training.py  stage_4_recommendation.py
src/book_recommender/config/: configuration.py
src/book_recommender/entity/: config_entity.py
src/book_recommender/exception/: exception_handler.py
src/book_recommender/logger/: log.py
src/book_recommender/pipeline/: DataIngestion.py  Recommendation.py  Training.py
src/book_recommender/utils/: util.py
